--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Counter-Strike: REZero</title>
+    <title>Counter-Strike REZero - Palestinian Edition</title>
     <meta name="keywords" content="azizjaber, cs, Counter-Strike, REZero, palestine, game, Counter-Strike 1.6">
     <meta name="description" content="Counter-Strike REZero">
     <meta name="copyright" content="AzizJaber">
@@ -13,11 +13,11 @@
     <meta property="og:site_name" content="Counter-Strike REZero">
     <meta property="og:title" content="Counter-Strike REZero">
     <meta property="og:description" content="Counter-Strike REZero">
-    <meta property="og:image" content="https://scontent.fjrs25-1.fna.fbcdn.net/v/t1.15752-9/307253626_505165927914733_41064270714581119_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=ae9488&_nc_ohc=JubSJJQhtVIAX9UGQ4I&_nc_ht=scontent.fjrs25-1.fna&oh=03_AdTJXtRmTqlsdlyB0-8OwhK2yQdME7URUWR0pbBjXtv9xA&oe=637715EE">
-    <link rel="icon" href="https://scontent.fjrs25-1.fna.fbcdn.net/v/t1.15752-9/307253626_505165927914733_41064270714581119_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=ae9488&_nc_ohc=JubSJJQhtVIAX9UGQ4I&_nc_ht=scontent.fjrs25-1.fna&oh=03_AdTJXtRmTqlsdlyB0-8OwhK2yQdME7URUWR0pbBjXtv9xA&oe=637715EE">
+    <meta property="og:image" content="https://www.cs-rezero.ml/images/logo.jpg">
+    <link rel="icon" href="https://www.cs-rezero.ml/images/logo.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Cairo" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
+    <link href="./css/lightbox.min.css" rel="stylesheet">
     <link href="./css/main.css" rel="stylesheet">
 </head>
 <body class="bg-dark">  
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#photos"><i class="fa-solid fa-images"></i> معرض الصور</a>
+              <a class="nav-link" href="#features"><i class="fa-solid fa-gamepad"></i> مميزات النسخة</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#download"><i class="fa-solid fa-download"></i> التحميل</a>
@@ -77,29 +77,69 @@
         النسخة الفلسطينية
         <small style="color: lightgreen;">عش الدبابير</small>
       </h4>
-      <h6><span class="badge text-bg-light">Counter-Strike 1.6</span></h6>
+      <h6><span class="badge text-bg-danger text-dark">حصريا فقط في الموقع الرسمي</span></h6>
     </div>  
   </section>
 
   <br>
-  
-  <section id="photos">
-    <div class="photo-gallery">
-      <div class="container">
+  <br>
+    
+  <section id="features">
+  <div class="container p-4">
+    <div class="row">
+	  <div class="intro text-center">
+		<h2>مميزات النسخة</h2>
+		<small class="text-muted" style="color: red; font-weight: bold;">لمحة عن ميزات النسخة عش الدبابير</small>
+	  </div>
+	  <div class="text-center col-lg-6 col-md-12 mb-4 mb-md-0">
+        <h5 class="text-warning"><i class="fa-solid fa-person-rifle"></i> الشخصيات</h5>
+        <p>
+			تم التعديل على الشخصيات الرئيسية في اللعبة بشكل كامل واضافة سكنات للمقاومة الفلسطينية والقوات الخاصة في الفريق المعادي
+        </p>
+      </div>
+
+      <div class="text-center col-lg-6 col-md-12 mb-4 mb-md-0">
+        <h5 class="text-warning"><i class="fa-solid fa-gun"></i> الأسلحة</h5>
+        <p>
+			تم تغيير كافة الأسلحة والمودلز الخاصة فيها ولاننسى ايضا التعديل على اصوات الأسلحة لإعطاء جو المعركة واقعية اكبر
+        </p>
+      </div>
+		
+      <div class="text-center col-lg-6 col-md-12 mb-4 mb-md-0">
+        <h5 class="text-warning"><i class="fa-solid fa-star-and-crescent"></i> الأصوات</h5>
+        <p>
+			اصوات عربية اسلامية بالكامل المأخوذة من اللعبة المحبوبة والمعروفة بإسم الإسلامية
+        </p>
+      </div>
+
+      <div class="text-center col-lg-6 col-md-12 mb-4 mb-md-0">
+        <h5 class="text-warning"><i class="fa-solid fa-wand-magic-sparkles"></i> تحسينات عامة</h5>
+        <p>
+			واللعبة تحتوي على العديد من التحسينات والتعديلات الخاصة بالقوائم والصور الموجودة وتعديلات بأسلوب اللعب
+        </p>
+      </div>
+      <div class="text-center p-3">
+        <h5 class="text-warning"><i class="fa-solid fa-network-wired"></i> دعم السيرفرات المحلية والعالمية</h5>
+        <p>
+			يمكنك اللعب على سيرفرات الشبكة المحلية او العالمية بدون اي مشاكل
+        </p>
+      </div>
+    </div>
+  </div>
+
+
+	<div class="photo-gallery">
+		<div class="container">
           <div class="intro text-center">
-              <h2>معرض الصور</h2>
-              <p>هذا المعرض يحوي عدد من الصور واللقطات من داخل اللعبة مباشرة تم تصويرها ووضعها في هذا المعرض لترى كيف سيكون شكل اللعبة من الداخل.</p>
-              <small style="color: red; font-weight: bold;">إضغط على الصورة للتكبير</small>
+              <h2>لقطات من اللعبة</h2>
+              <p>بعض اللقطات من داخل اللعبة مباشرة لتوضيح بعض التعديلات بداخل النسخة</p>
+              <small style="color: red; font-weight: bold;">إضغط على الصورة لتكبيرها</small>
           </div>
           <div class="row photos">
               <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="./images/1.png" data-lightbox="photos"><img class="img-fluid" src="./images/1.png"></a></div>
               <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="./images/2.png" data-lightbox="photos"><img class="img-fluid" src="./images/2.png"></a></div>
               <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="./images/3.png" data-lightbox="photos"><img class="img-fluid" src="./images/3.png"></a></div>
               <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="./images/4.png" data-lightbox="photos"><img class="img-fluid" src="./images/4.png"></a></div>
-              <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="./images/5.png" data-lightbox="photos"><img class="img-fluid" src="./images/5.png"></a></div>
-              <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="./images/6.png" data-lightbox="photos"><img class="img-fluid" src="./images/6.png"></a></div>
-              <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="./images/7.png" data-lightbox="photos"><img class="img-fluid" src="./images/7.png"></a></div>
-              <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="./images/8.png" data-lightbox="photos"><img class="img-fluid" src="./images/8.png"></a></div>
           </div>
       </div>
     </div>
@@ -115,34 +155,34 @@
           </div>
           <div class="card bg-success text-center">
             <div class="card-header">
-              <i class="fa-solid fa-fire"></i> Media Fire - <i class="fa-brands fa-google-drive"></i> Google Drive
+              <i class="fa-solid fa-fire"></i> Media Fire
             </div>          
             <div class="card-body" style="font-weight: bold;">
               <h6 class="card-subtitle mb-2 text-warning">هذا الملف آمن ولايحوي اي برامج ضارة او خبيثة ... ولكن لعدم توفر شهادة ملكية للنسخة من الممكن لمضادات الفايروسات ان تكشفه كنوع من انواع البرامج الخبيثة</h6>
               <p class="card-text">لتجنب اي مشاكل خاصة بمضادات الفايروسات يمكنك تثبيت النسخة على قرص آخر غير القرص الذي يحوي على النظام الاساسي ويندوز</p>
-              <a href="#" class="btn btn-dark"><i class="fa-solid fa-fire"></i> MediaFire</a>
-              <a class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#warning"><i class="fa-brands fa-google-drive"></i> Google Drive</a>
+              <a href="https://www.mediafire.com/file/dlo6cnzq4uulzt0/Counter-Strike_REZero.exe/file" class="btn btn-dark"><i class="fa-solid fa-file-arrow-down"></i> الذهاب الى رابط التحميل</a>
+              <a class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#warning"><i class="fa-brands fa-windows"></i> مشكلة في تشغيل اللعبة ؟</a>
               <div class="modal fade text-dark" id="warning" tabindex="-1" aria-labelledby="warningtitle" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h1 class="modal-title fs-5" id="warningtitle"><i class="fa-brands fa-google-drive"></i> Google Drive</h1>
+                      <h1 class="modal-title fs-5" id="warningtitle"><i class="fa-solid fa-bug-slash"></i> مشاكل تشغيل اللعبة</h1>
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
                       <small>
-                        استخدام جوجل درايف فقط في حالة ان الرابط الاساسي ميديا فاير قد توقف... يرجى العلم ان سرعة التحميل بجوجل درايف محدودة ولها عدد معين من التحميلات اليومية لذلك يرجى التبليغ اذا كان هنالك مشكلة في الرابط الاساسي عن طريق صفحة مبرمج الموقع او مصمم اللعبة
+						بعض الأجهزة تواجه مشكلة في تشغيل اللعبة بسبب لانشر اللعبة... اذا واجهتك هذه المشكلة يرجى تحميل ملف الإصلاح واستخراج محتوياته بداخل مجلد اللعبة الرئيسي وقبول استبدال الملفات. وفي حال احتجت مساعدة او واجهتك مشكلة اخرى يرجى التواصل معنا عن طريق التيك توك الخاص بمصمم اللعبة
                       </small>
                     </div>
                     <div class="modal-footer">
-                      <a href="https://drive.google.com/file/d/1II05rBX8wvT7P9oJGnN5yAnhHkxlVJYr/view?usp=sharing">
-                        <button type="button" class="btn btn-success" data-bs-dismiss="modal"><i class="fa-solid fa-file-arrow-down"></i> الذهاب الى رابط التحميل</button>
+                      <a href="https://www.mediafire.com/file/q1qmlp3kvf491g1/%D9%85%D9%84%D9%81+%D8%A7%D9%84%D8%A3%D8%B5%D9%84%D8%A7%D8%AD.rar" target="_blank">
+                        <button type="button" class="btn btn-success" data-bs-dismiss="modal"><i class="fa-solid fa-wrench"></i> تحميل ملف الإصلاح</button>
                       </a>
                       <a href="https://www.tiktok.com/@it.ps1" target="_blank">
-                        <button type="button" class="btn btn-danger"><i class="fa-solid fa-bug"></i> التبليغ عن مشكلة</button>
+                        <button type="button" class="btn btn-danger"><i class="fa-solid fa-bug"></i> مشكلة اخرى ؟ تواصل معنا</button>
                       </a>
                     </div>
-                  </div>
+                   </div>
                 </div>
               </div>
              </div>
@@ -157,10 +197,10 @@
     <div class="text-center container p-4">
       <div class="row">
         <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-          <h5 class="text-uppercase"><i class="fa-solid fa-code"></i> Website Developer: <a class="text-danger" href="https://github.com/azizmjaber02" target="_blank">AzizJaber</a></h5>
+          <h5 dir="rtl"><i class="fa-solid fa-code"></i> مبرمج الموقع: <a class="text-danger" href="https://github.com/azizmjaber02" target="_blank">AzizJaber</a></h5>
         </div>
         <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-          <h5 class="text-uppercase"><i class="fa-solid fa-screwdriver-wrench"></i> Version Desinger & Mod: <a class="text-danger" href="https://www.tiktok.com/@it.ps1" target="_blank"> Hasan Damere</a></h5>
+          <h5 dir="rtl"><i class="fa-solid fa-screwdriver-wrench"></i> مصمم ومعدل النسخة: <a class="text-danger" href="https://www.tiktok.com/@it.ps1" target="_blank"> Hasan Damere</a></h5>
         </div>
       </div>
     </div>
@@ -168,13 +208,12 @@
     <div class="text-center p-3" style="background-color: rgba(17, 16, 16, 0.2);">
       © 2022
       <a class="text-danger" href="https://github.com/azizmjaber02" target="_blank">AzizJaber</a>
-      - All rights reserved for website developer
+      - All rights reserved for website developer.
     </div>
   </footer>
 
-  <script src="https://kit.fontawesome.com/7fd616fa19.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
+	<script src="https://kit.fontawesome.com/7fd616fa19.js" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+	<script src="./js/lightbox-plus-jquery.min.js"></script>
 </body>
 </html>
