--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="https://www.tiktok.com/@it.ps1" target="_blank"><i class="fa-solid fa-screwdriver-wrench"></i> Hasan Damere</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="https://www.tiktok.com/@kemzodev" target="_blank"><i class="fa-solid fa-code"></i> AzizJaber</a></li>
+                <li><a class="dropdown-item" href="https://www.tiktok.com/@kemzops" target="_blank"><i class="fa-solid fa-code"></i> AzizJaber</a></li>
               </ul>
             </li>
 
